--- a/1_simple_flow.ipynb
+++ b/1_simple_flow.ipynb
@@ -2,29 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "da4a2c0d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INPUT:\n",
-      " Mahad is studying in FAST university, haha less GPA.\n",
-      "\n",
-      "SUMMARY:\n",
-      " Mahad is a student at FAST University and has a low GPA.\n",
-      "\n",
-      "TRANSLATION (Urdu):\n",
-      " Here's the Urdu translation:\n",
-      "\n",
-      "**ماحد فاسٹ یونیورسٹی میں طالب علم ہے اور اس کا جی پی اے کم ہے۔**\n",
-      "\n",
-      "**Transliteration:** Mahad FAST University mein talib-e-ilm hai aur us ka GPA kam hai.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from typing import TypedDict\n",
@@ -41,7 +22,16 @@
     "    raise ValueError(\"Missing GEMINI_API_KEY in .env file\")\n",
     "\n",
     "# Initialize Gemini client\n",
-    "client = genai.Client(api_key=api_key)\n",
+    "client = genai.Client(api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "986fbbb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Wrapper for Gemini 2.5 Flash\n",
     "def call_gemini(prompt: str, disable_thinking: bool = False) -> str:\n",
@@ -70,7 +60,16 @@
     "\n",
     "def translator(state: State) -> State:\n",
     "    prompt = \"Translate this into Urdu:\\n\\n\" + state[\"summary\"]\n",
-    "    return {\"translation\": call_gemini(prompt)}\n",
+    "    return {\"translation\": call_gemini(prompt)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f47384a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# ---------------- Build Graph ----------------\n",
     "graph = StateGraph(State)\n",
@@ -79,7 +78,46 @@
     "graph.set_entry_point(\"summarizer\")\n",
     "graph.add_edge(\"summarizer\", \"translator\")\n",
     "graph.add_edge(\"translator\", END)\n",
-    "app = graph.compile()\n",
+    "app = graph.compile()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9d616740",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INPUT:\n",
+      " Mahad is studying in FAST university, haha less GPA.\n",
+      "\n",
+      "SUMMARY:\n",
+      " Mahad is a student at FAST university and has a low GPA.\n",
+      "\n",
+      "TRANSLATION (Urdu):\n",
+      " Here are a couple of ways to translate that into Urdu, both are natural:\n",
+      "\n",
+      "**Option 1 (More common phrasing for \"student at a university\"):**\n",
+      "مہد فاسٹ یونیورسٹی کا طالب علم ہے اور اس کا جی پی اے کم ہے۔\n",
+      "*Mahad FAST University ka talib-e-ilm hai aur us ka GPA kam hai.*\n",
+      "\n",
+      "**Option 2 (Slightly more literal for \"at\"):**\n",
+      "مہد فاسٹ یونیورسٹی میں ایک طالب علم ہے اور اس کا جی پی اے کم ہے۔\n",
+      "*Mahad FAST University mein aik talib-e-ilm hai aur us ka GPA kam hai.*\n",
+      "\n",
+      "**Breakdown of terms:**\n",
+      "*   **Mahad:** مہد\n",
+      "*   **is a student:** طالب علم ہے (talib-e-ilm hai)\n",
+      "*   **at FAST university:** فاسٹ یونیورسٹی کا/میں (FAST University ka/mein)\n",
+      "*   **and:** اور (aur)\n",
+      "*   **has a low GPA:** اس کا جی پی اے کم ہے (us ka GPA kam hai - literally \"his GPA is low\")\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# ---------------- Run ----------------\n",
     "if __name__ == \"__main__\":\n",
@@ -93,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "38ec612e",
    "metadata": {},
    "outputs": [
@@ -124,11 +162,19 @@
    "source": [
     "print(app.get_graph().draw_mermaid())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb0763f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
